fix preprint spacing on desktop

--- a/assets/less/single.less
+++ b/assets/less/single.less
@@ -185,7 +185,7 @@
 	.single{
 		.preprint-container{
 			margin: -50px;
-		    margin-bottom: 25px;
+		    margin-bottom: 50px;
 		}
 		.video-container {
 			margin: 0px -50px;
